--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
 			<version>2.2.7.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
